force-app/main/default/objects/Apttus__ComplyCustomProperties__c/Apttus__ComplyCustomProperties__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Holds custom properties for various context objects</description>
    <label>Comply Custom Properties</label>
</CustomObject>