force-app/main/default/objects/Apttus__ComplyCustomProperties__c/fields/Apttus__ChildObjectTypes__c.field-meta.xml
<CustomField>
    <fullName>Apttus__ChildObjectTypes__c</fullName>
    <description>List of comma separated child object types for this business object</description>
    <inlineHelpText>List of comma separated child object types for this business object</inlineHelpText>
    <label>Child Object Types</label>
    <length>255</length>
    <type>Text</type>
</CustomField>