force-app/main/default/objects/Apttus__ComplyCustomProperties__c/fields/Apttus__DocAssemblyRuleFieldSetName__c.field-meta.xml
<CustomField>
    <fullName>Apttus__DocAssemblyRuleFieldSetName__c</fullName>
    <description>The API name of the doc assembly rule field set associated with the business object.</description>
    <inlineHelpText>The API name of the doc assembly rule field set associated with the business object.</inlineHelpText>
    <label>Doc Assembly Rule FieldSet Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>