force-app/main/default/objects/Apttus__ComplyCustomProperties__c/fields/Apttus__DocAssemblyRuleStaticFieldSetName__c.field-meta.xml
<CustomField>
    <fullName>Apttus__DocAssemblyRuleStaticFieldSetName__c</fullName>
    <description>The API name of the doc assembly rule static field set associated with the business object. The list of static fields are used as pre-filters to retrieve rules associated with the rule set during the dynamic assembly process.</description>
    <inlineHelpText>The API name of the doc assembly rule static field set associated with the business object. The list of static fields are used as pre-filters to retrieve rules associated with the rule set during the dynamic assembly process.</inlineHelpText>
    <label>Doc Assembly Rule Static FieldSet Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>